--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="javascripts/test.js"></script>
+    <script type="text/javascript">
+        angular.module('myApp', ['ngRoute']);
+    </script>
 </head>
 <body>
 <div class="container">
