--- a/public/register.html
+++ b/public/register.html
@@ -70,7 +70,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-5 col-md-offset-3">
-                                <button class="btn btn-info" type="submit">Sumbit</button>
+                                <button class="btn btn-info" type="submit">Submit</button>
                                 <button class="btn btn-info" type="reset" ng-click="reset()">Reset</button>
                             </div>
                         </div>
